<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AA App</string>
    <string name="action_settings">Settings</string>
    <string name="action_logout">Log Out</string>
    <string name="action_new_post">New Post</string>
    <string name="action_new_mail">New Mail</string>
    <string name="action_refresh">Refresh</string>
    <string name="title_section1">Home</string>
    <string name="title_section2">Posts</string>
    <string name="title_section3">Mail</string>
    <string name="title_section4">Contacts</string>
    <string name="pref_privacySettings">Privacy Settings</string>
    <string name="pref_sharePhone">Share your phone #?</string>
    <string name="pref_sharePhone_summ">Would you like to share your phone # with your home group?</string>
    <string name="pref_shareEmail">Share your email?</string>
    <string name="pref_shareEmail_summ">Would you like to share your email with your home group?</string>
    <string name="pref_rememberMe">Remember me?</string>
    <string name="pref_rememberMe_summ">Keep this account logged in.</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_create_acct">Create Account</string>
    <string name="title_activity_new_post">New Post</string>
    <string name="title_activity_conversation">Conversation</string>
    <string name="title_activity_new_mail">New Message</string>
    <string name="title_activity_contact">Contact</string>
    <string name="pref_geoSettings">Proximity Inspirations</string>
    <string name="pref_geoAlerts">Alert you in tempting areas?</string>
    <string name="pref_geoAlerts_summ">Would you like positive messages if you are near a bar?</string>
    <string name="pref_alertSpons">Activate sponsor alerts?</string>
    <string name="pref_alertSpons_summ">Would you like to alert your sponsor if you are near a bar?</string>
    <string name="pref_postSettings">Post/Message Settings</string>
    <string name="pref_postTimeCheck">Set post time limit?</string>
    <string name="pref_postTimeCheck_summ">Permanently forget and delete your posts after set time?</string>
    <string name="pref_postTimeAmmount">Tap to select time limit</string>
    <string name="pref_postTimeAmmount_summ">Permanently forget and delete your posts after how many hours?</string>
    <string name="pref_messTimeCheck">Set message time limit?</string>
    <string name="pref_messTimeCheck_summ">Permanently forget and delete your messages after set time?</string>
    <string name="pref_messTimeAmmount">Tap to select time limit</string>
    <string name="set_sponsor">Set as Sponsor</string>
    <string name="block_user">Block User</string>
    <string name="create_account">Create Account</string>
    <string name="submit_post_str">Submit Post</string>
    <string name="submit_mail_str">Submit Mail</string>
    <string name="enter_firstname">First Name</string>
    <string name="enter_username">Username</string>
    <string name="enter_password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="enter_groupid">Group ID</string>
    <string name="firstname_hint">Enter your first name</string>
    <string name="username_hint">Enter a username</string>
    <string name="password_hint">Enter a password</string>
    <string name="confirm_password_entry">Re-enter the password</string>
    <string name="groupid_hint">Enter the group ID</string>
    <string name="write_post_hint">Write a post</string>
    <string name="write_mail_hint">Write a message</string>
    <string name="welcome_message">Welcome to AApp!</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="login">Login</string>
    <string name="hello">Hello</string>
    <string name="empty"></string>

</resources>
