<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	>
    <LinearLayout
        android:orientation="vertical"
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		> 
	   <TextView 
		    android:id="@+id/enter_firstname"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:text="@string/enter_firstname"
		    android:layout_marginTop="4dp"
		    android:layout_marginBottom="4dp"
		    android:textSize="32sp"
		    />
	    <EditText
		    android:id="@+id/firstname_entry"
		    android:layout_width="300dp"
		    android:layout_height="wrap_content"
		    android:hint="@string/firstname_hint"
		    android:inputType="text" 
		    />
	    <TextView 
		    android:id="@+id/enter_username"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:text="@string/enter_username"
		    android:layout_marginTop="35dp"
		    android:layout_marginBottom="4dp"
		    android:textSize="32sp"
		    />
	    <EditText
		    android:id="@+id/username_entry"
		    android:layout_width="300dp"
		    android:layout_height="wrap_content"
		    android:hint="@string/username_hint"
		    android:inputType="text" 
		    />
	    <TextView 
		    android:id="@+id/enter_password"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:text="@string/enter_password"
		    android:layout_marginTop="35dp"
		    android:layout_marginBottom="4dp"
		    android:textSize="32sp"
		    />
	    <EditText
		    android:id="@+id/password_entry"
		    android:layout_width="300dp"
		    android:layout_height="wrap_content"
		    android:hint="@string/password_hint"
		    android:inputType="textPassword" 
		    />
	    <TextView 
		    android:id="@+id/confirm_password"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:text="@string/confirm_password"
		    android:layout_marginTop="35dp"
		    android:layout_marginBottom="4dp"
		    android:textSize="32sp"
		    />
	    <EditText
		    android:id="@+id/confirm_password_entry"
		    android:layout_width="300dp"
		    android:layout_height="wrap_content"
		    android:hint="@string/confirm_password_entry"
		    android:inputType="textPassword" 
		    />
	    <TextView 
		    android:id="@+id/enter_groupid"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:text="@string/enter_groupid"
		    android:layout_marginTop="35dp"
		    android:layout_marginBottom="4dp"
		    android:textSize="32sp"
		    />
	    <EditText
		    android:id="@+id/groupid_entry"
		    android:layout_width="300dp"
		    android:layout_height="wrap_content"
		    android:hint="@string/groupid_hint"
		    android:inputType="number" 
		    />
	    <Button
		    android:id="@+id/create_account"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:text="@string/create_account"
		    />
	</LinearLayout>
</ScrollView>