<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="ifRoom|withText"
        android:title="@string/action_settings"
        android:icon="@drawable/ic_action_settings"/>
    <item
        android:id="@+id/action_logout"
        android:orderInCategory="101"
        android:showAsAction="never"
        android:title="@string/action_logout"/>
    <item
        android:id="@+id/action_new_post"
        android:orderInCategory="98"
        android:showAsAction="ifRoom"
        android:title="@string/action_new_post"
        android:icon="@drawable/ic_action_new_event"/>
    <item
        android:id="@+id/action_new_mail"
        android:orderInCategory="99"
        android:showAsAction="ifRoom"
        android:title="@string/action_new_mail"
        android:icon="@drawable/ic_action_new_email"/>
    <item
        android:id="@+id/action_refresh"
        android:orderInCategory="97"
        android:showAsAction="ifRoom"
        android:title="@string/action_refresh"
        android:icon="@drawable/ic_action_refresh"/>

</menu>
