<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
	<TextView 
	    android:id="@+id/welcome_message"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:text="@string/welcome_message"
	    android:textSize="32sp"
	    android:textStyle="bold"
	    />
	<Button
	    android:id="@+id/create_account"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:text="@string/create_account"
	    />
	<Button
	    android:id="@+id/login"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:text="@string/login"
	    />
	<TextView 
	    android:id="@+id/result"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:text=""
	    />
</LinearLayout>